# Augmented-Citizen

./: -Focus-Mainconstructs.csv  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  STATUS.md  ar-webview.js  augmented-citizen-consent-C1.json  augmented_citizen.db  brain.identity.travel-safe.v1.aln  chat-protocol.js  consent-db.js  consent-integration.js  geospatial-audio.js  hand-gestures.js  identity-manager.js  infra-net.federal.bridge.cache.aln  srcrf_brain_actuation_guard.rs
aln/: ALN.NANOSWARM.NONWEAPONIZABLE.v1.aln  CityPassAuditShard2026v1.aln  CityPassShard2026v1.aln  augmented-id.age.policy.v1.aln  augmented-id.neurorights.safety.v1.aln  bci.nanoswarm.evolution.v1.aln  continuity_invariants.aln  cybercore-neural-intent-evo-bind.v1.aln  cybercore-neural-slavery-prohibition.v1.aln  econet.healthcare.policy.v1.aln  (+7 more)
aln-audit-ledger/: audit.host.bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7.2026Q1.aln  audit.index.schema.aln  audit.schema.events.aln
aln-bci-special/: bci.special.cognitive-liberty.envelope.aln  bci.special.cognitive-sovereignty.binding.aln  bci.special.domain-model.aln  bci.special.host-personal-policy.overlay.example.aln  bci.special.host-personal-policy.overlay.v2.aln  bci.special.mental-identity.envelope.aln  bci.special.mental-integrity.envelope.aln  bci.special.mental-privacy.envelope.aln  bci.special.organic-integration.flags.aln  bci.special.psychological-continuity.envelope.aln  bci.special.red-lines.prohibited-uses.aln  bci.special.rights-scope.aln
aln-consent-envelopes/: consent.mental-privacy.read-limited.template.aln  consent.modulation.therapeutic-controlled.template.aln  consent.template.nanoswarm-operations.aln
aln-core-spec/: beliefs.core-schema.aln  beliefs.protection.classes.aln  bostrom-authority.binding.aln  consent.core-schema.aln  eliefs.sovereignty-claims.aln  events.core-schema.aln  host.capability-bounds.aln  host.core-schema.aln  host.healthcare-context.aln  invariants.cognitive-liberty.aln  invariants.mental-identity.aln  invariants.mental-integrity.aln  invariants.mental-privacy.aln  invariants.non-reversal.aln  invariants.psychological-continuity.aln  rights.catalog.healthcare.v1.aln  rights.catalog.neurorights.v1.aln  rights.constraints.global-invariants.aln  rights.core-schema.aln  sovereignty.core-schema.aln  sovereignty.digital-datascope.aln
aln-jurisdiction/: aln.jurisdiction.phoenix.neuralprohibitions.v1.aln  aln.jurisdiction.phoenix.neuralprohibitions.v1.json
aln-neural-abuse/: neural.abuse.consequences.leo-government.v1.aln
crates/ac-aln-core/: Cargo.toml
crates/ac-aln-core/src/: lib.rs  proof_public_assembly_right.aln  qpu_datashard_vc_rs_identity.aln
crates/ac-gateway-api/: Cargo.toml
crates/ac-gateway-api/src/: main.rs
crates/augmented-citizen-host-affecting/: Cargo.toml
crates/augmented-citizen-host-affecting/src/: brain_binding_guard.rs  kani_proofs.rs  lease.rs  lib.rs
crates/augmented-citizen-mcp-server/: Cargo.toml
crates/augmented-citizen-mcp-server/src/: audit.rs  context.rs  kernel_loader.rs  lib.rs  main.rs  policy_hash.rs  security.rs
crates/augmented-citizen-mcp-server/src/identity/: host_binding.rs
crates/augmented-citizen-mcp-server/src/protocol/: capabilities.rs  jsonrpc.rs  mod.rs
crates/augmented-citizen-mcp-server/src/resources/: mod.rs
crates/augmented-citizen-mcp-server/src/security/: audit.rs  mod.rs  policies.rs
crates/augmented-citizen-mcp-server/src/tools/: audit_tool.rs  bio_state.rs  consent.rs  mod.rs  policy.rs  policy_binding.rs  upgrade_planner.rs
crates/augmented-id-guard/: Cargo.toml
crates/augmented-id-guard/src/: lib.rs
crates/biophysical-blockchains/: Cargo.toml
crates/biophysical-blockchains/src/: evolution_window_sintent.rs  lib.rs
crates/biophysical-corridor-evidence/: Cargo.toml
crates/biophysical-corridor-evidence/tests/: kani_corridors.rs
crates/bioscale-upgrade-store/: Cargo.toml
crates/bioscale-upgrade-store/src/: continuity_guard.rs
crates/brain-identity-core/: Cargo.toml
crates/brain-identity-core/src/: lib.rs  main.rs
crates/brain-identity-kernel/: Cargo.toml
crates/brain-identity-kernel/src/: fixed.rs  guard.rs  header.rs  intent.rs  kernel.rs  lib.rs  shard.rs
crates/brain-identity-token/: Cargo.toml
crates/brain-identity-token/src/: lib.rs  pain_extension.rs  types.rs
crates/brain-identity-token/tests/: pain_index_derives_from_brain_state_commit.rs
crates/city-eco-ledger/: Cargo.toml
crates/city-eco-ledger-sqlite/: Cargo.toml
crates/city-eco-ledger-sqlite/src/: lib.rs
crates/city-eco-ledger/src/: lib.rs
crates/cybercore-brain/: Cargo.toml
crates/cybercore-brain/src/: lib.rs  qpu_datashard_cyberrank.aln
crates/cybernano-intent/: Cargo.toml
crates/cybernano-intent/src/: intent_risk.rs  lib.rs  sovereign_filter.rs
crates/cybernano-unknown-upgrade-guard/: Cargo.toml
crates/cybernano-unknown-upgrade-guard/src/: lib.rs
crates/cybernano-unknown-upgrade-guard/tests/: kani_unknown_upgrade.rs
crates/detox-interval-guard/: Cargo.toml
crates/detox-interval-guard/src/: lib.rs
crates/deviceless-agent-guard/: Cargo.toml
crates/deviceless-agent-guard/src/: lib.rs
crates/econet-healthcare-guard/: Cargo.toml
crates/econet-healthcare-guard/src/: charter_econet_bridge.rs  lib.rs
crates/neurorights-evidence/: Cargo.toml
crates/neurorights-evidence/src/: lib.rs
crates/neurorights-evidence/tests/: kani_neurorights.rs
crates/organiccpu-scheduler/: Cargo.toml
crates/organiccpu-scheduler/src/: healthcare_router.rs
crates/sovereign-guards-core/: Cargo.toml
crates/sovereign-guards-core/src/: charter_inputs.rs  lifeforce_ota_guard.rs
crates/state-only-channel/: Cargo.toml
crates/state-only-channel/src/: lib.rs  pain_index.rs  state_only_vec.rs
crates/state-only-channel/tests/: pain_index_state_only.rs
crates/vitalnet-plane/: Cargo.toml
crates/vitalnet-plane/src/: lib.rs  post_compromise.rs  qpu_datashard_vitalnet_safety.aln  sensor_gating.rs
crates/xr-telemetry-client/: Cargo.toml  README.md
crates/xr-telemetry-client/src/: client.rs  lib.rs
(+107 files in other folders)
