# filename: Cargo.toml
# Root manifest for mk-bluebird/Augmented-Citizen

[workspace]
members = [
    # Existing guards / schedulers
    "crates/sovereign-guards-core",
    "crates/econet-healthcare-guard",
    "crates/detox-interval-guard",
    "crates/organiccpu-scheduler",
    "crates/augmented-id-guard",
    "crates/bioscale-upgrade-store",
    "crates/drone-kernel",

    # InfraNet / VitalNet / ALN planes
    "crates/ac-aln-core",
    "crates/vitalnet-plane",
    "crates/cybercore-brain",
    "crates/cyberorganic-os",
    "crates/hercules-plane",
    "crates/reality-os",
    "crates/dreamnet-plane",
    "crates/cyberswarm-plane",
    "crates/neuro-content-safety",
    "crates/ac-gateway-api",
]

resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = [
    "mk-bluebird <host@augmented-citizen.org>",
    "Augmented-Citizen Lab <research@augmented-citizen.org>",
]
homepage = "https://github.com/mk-bluebird/Augmented-Citizen"
repository = "https://github.com/mk-bluebird/Augmented-Citizen"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std"] }
axum = { version = "0.7", features = ["macros", "http1", "http2", "json", "tokio"] }
hyper = { version = "1.3", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
parking_lot = "0.12"
kani = { version = "0.52", default-features = true }

# Optional: common testing / tooling crates (shared, but not required in every crate)
proptest = "1.4"
insta = { version = "1.39", features = ["yaml"] }
