# crates/ac-gateway-api/Cargo.toml
[package]
name = "ac-gateway-api"
version = "0.1.0"
edition = "2024"

[dependencies]
ac-aln-core = { path = "../ac-aln-core" }
vitalnet-plane = { path = "../vitalnet-plane" }
cybercore-brain = { path = "../cybercore-brain" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
