[package]
name = "augmented-citizen-mcp-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "MCP server for mk-bluebird/Augmented-Citizen with non-reversal cybernetic invariants."
repository = "https://github.com/mk-bluebird/Augmented-Citizen"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
thiserror = "1"
