[package]
name = "augmented-citizen-mcp-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "MCP server for mk-bluebird/Augmented-Citizen with non-reversal cybernetic invariants."
repository = "https://github.com/mk-bluebird/Augmented-Citizen"

[lib]
name = "augmented_citizen_mcp_server"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "augmented-citizen-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", default-features = true, features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
heapless = "0.8"
thiserror = "1.0"

anti-coercion-enclave = { path = "../anti-coercion-enclave" }
brain-identity-kernel = { path = "../brain-identity-kernel" }

kani = { version = "0.50", default-features = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
