# filename: Cargo.toml
# destination: crates/bioscale-upgrade-store/Cargo.toml
# repository: https://github.com/mk-bluebird/Augmented-Citizen

[package]
name = "bioscale-upgrade-store"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Augmented Citizen <bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7>"]
description = "Shared bioscale UpgradeDescriptor ABI and sovereign cybernetic evolution store for host-sovereign, neurorights-aligned upgrades."
repository = "https://github.com/mk-bluebird/Augmented-Citizen"
readme = "README.md"
keywords = ["cybernetics", "neurorights", "bioscale", "sovereignty", "bci"]
categories = ["science", "hardware-support"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
