# crates/brain-identity-core/Cargo.toml
[package]
name = "brain-identity-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Neurorights-safe BrainIdentityToken, state-only channels, and duty-cycle guards for augmented citizens."
repository = "https://github.com/mk-bluebird/Augmented-Citizen"
keywords = ["brain-identity", "neurorights", "aln", "bci", "smart-city"]
categories = ["embedded", "science", "authentication"]

[lib]
name = "brain_identity_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
# Enable extra logging and diagnostics; no behavioral changes.
diagnostics = []

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# Kani must never be optional for proofs; only used in dev/test profile. [file:22]
kani-verifier = "0.50.0"
serde_json = "1"
