# crates/city-eco-ledger/Cargo.toml
[package]
name = "city-eco-ledger"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Eco-impact accumulator for city-wide identity tap energy deltas (E_city) in the Augmented-Citizen stack."
repository = "https://github.com/mk-bluebird/Augmented-Citizen"
authors = ["mk-bluebird <dev@augmented.city>"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
name = "city_eco_ledger"
path = "src/lib.rs"

[package.metadata.infra-net]
design_score = "DLow"
neuro_risk = "NRLow"
energy_efficiency = "EEHigh"
role = "EcoLedgerCore"
