[package]
name = "cybernano-unknown-upgrade-guard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["mk-bluebird / Cybercore"]
description = "Tighten-only, Kani-verified guard for CyberNano unknown-region upgrade corridors, bound to did.alnorganic-host and bostrom18sd2ujv24ual9c9pshtxys6j8knh6xaead9ye7."
repository = "https://github.com/mk-bluebird/Augmented-Citizen"
homepage = "https://github.com/mk-bluebird/Augmented-Citizen"
keywords = ["cybernano", "biospatial", "safety", "kani", "aln"]
categories = ["embedded", "science", "simulation"]
publish = false

[lib]
name = "cybernano_unknown_upgrade_guard"
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["alloc", "serde/std"]
# no_std mode is used on OrganicCPU / embedded paths.
no_std = []

[dependencies]
alloc = { package = "alloc-no-std", version = "0.3", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

# Kani model checker for formal verification harnesses
[kani]
# Kani uses its own driver; no version pin here in Cargo.toml.
# Harness files live under tests/ with `#![cfg(kani)]`.

[package.metadata.cargo-verify]
# Marker for CI to run Kani proofs on this crate.
enable-kani = true
