[package]
name = "deviceless-agent-guard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Guard-first safety and neurorights checks for deviceless, brain-identity-based agents."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mk-bluebird/Augmented-Citizen"
homepage = "https://github.com/mk-bluebird/Augmented-Citizen"
keywords = ["biopay", "neurorights", "safety", "agent", "cybercore"]
categories = ["authentication", "embedded", "science"]

[lib]
name = "deviceless_agent_guard"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# No external dependencies required for the core guard logic.
# Add internal Cybercore/Augmented-Citizen crates here once wired, e.g.:
# brain_identity_credentials = { path = "../../Cybercore/crates/brain_identity_credentials" }

[dev-dependencies]
# Add Kani or test harness dependencies here when you wire formal proofs.
