# filename: crates/sovereign-guards-core/Cargo.toml
[package]
name = "sovereign-guards-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["mk-bluebird <host@augmented-citizen.org>"]
description = "Core RoH/Lyapunov/Eco/Neurorights charter guards for Augmented-Citizen sovereignty stack"
repository = "https://github.com/mk-bluebird/Augmented-Citizen"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
kani = []  # Kani proofs are required in CI but optional at compile-time for consumers
