# crates/xr-telemetry-client/Cargo.toml
[package]
name         = "xr-telemetry-client"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
description  = "XR/AR/VR telemetry client for CyberNano Alzheimer's-aware safety guards."
license      = "MIT OR Apache-2.0"

[dependencies]
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
tokio           = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-tungstenite = "0.21"
tungstenite     = "0.21"
chrono          = { version = "0.4", features = ["serde"] }
url             = "2.5"
futures-util    = "0.3"
